# sinoptik

./: CHANGELOG.md  Cargo.toml  README.md  Rocket.toml.example
.forgejo/workflows/: check-lint-test.yml  release.yml
.gitea/workflows/: cargo.yml  check-lint-test.yml  release.yml
debian/: sinoptik.service
src/: forecast.rs  lib.rs  main.rs  maps.rs  position.rs  providers.rs
src/providers/: buienradar.rs  combined.rs  luchtmeetnet.rs
